category page and product page

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FS Fashion Marketplace</title>
+    <title>Category - FS Fashion Marketplace</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="brands-page">
     <!-- Header -->
     <header class="header">
         <div class="header-container">
@@ -31,35 +31,40 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-image">
-            <img src="image/mainImage.jpeg" alt="Gothic Architecture Interior">
-        </div>
-    </section>
-
-    <!-- Content Grid -->
-    <section class="content-grid">
-        <div class="grid-item">
-            <img src="image/rOHomePageBW.webp" alt="Fashion Group on Rocky Landscape" class="main-image">
-            <img src="image/rickOwensHomePageColor.webp" alt="Fashion Group on Rocky Landscape Color" class="hover-image">
-            <div class="brand-text">Rick Owens</div>
-        </div>
-        <div class="grid-item">
-            <img src="image/vwColor.webp" alt="Fashion Models Collage" class="main-image">
-            <img src="image/vwColor.webp" alt="Fashion Models Collage" class="hover-image">
-            <div class="brand-text">Vivienne Westwood</div>
-        </div>
-        <div class="grid-item">
-            <img src="image/balencolor-photoaidcom-greyscale.jpg" alt="Male Model Portrait" class="main-image">
-            <img src="image/balencolor.jpg" alt="Male Model Portrait Color" class="hover-image">
-            <div class="brand-text">Balenciaga</div>
-        </div>
-        <div class="grid-item">
-            <img src="image/mmBW.jpg" alt="Female Model in Dark Coat" class="main-image">
-            <img src="image/mmColor.jpg" alt="Female Model in Dark Coat" class="hover-image">
-            <div class="brand-text">Maison Margiela</div>
-        </div>
+    <!-- Main Content Grid -->
+    <section class="category-grid">
+        <a href="topPage.html" class="brand-item-link">
+            <div class="brand-item">
+                <img src="image/topsCat.jpeg" alt="Tops" class="brand-image">
+                <div class="brand-overlay">
+                    <span class="overlay-text">Tops</span>
+                </div>
+            </div>
+        </a>
+        <a href="outerwearPage.html" class="brand-item-link">
+            <div class="brand-item">
+                <img src="image/outerwearCategory.jpeg" alt="Outerwear" class="brand-image">
+                <div class="brand-overlay">
+                    <span class="overlay-text">Outerwear</span>
+                </div>
+            </div>
+        </a>
+        <a href="bottomsPage.html" class="brand-item-link">
+            <div class="brand-item">
+                <img src="image/bottomsCat.jpeg" alt="Bottoms" class="brand-image">
+                <div class="brand-overlay">
+                    <span class="overlay-text">Bottoms</span>
+                </div>
+            </div>
+        </a>
+        <a href="accessoriesPage.html" class="brand-item-link">
+            <div class="brand-item">
+                <img src="image/accessoriesCat.jpeg" alt="Accessories" class="brand-image">
+                <div class="brand-overlay">
+                    <span class="overlay-text">Accessories</span>
+                </div>
+            </div>
+        </a>
     </section>
 
     <!-- Footer -->
@@ -88,3 +93,4 @@
     </footer>
 </body>
 </html>
+
