--- a/brandsPage.html
+++ b/brandsPage.html
@@ -18,15 +18,14 @@
             </div>
             <nav class="navigation">
                 <ul class="nav-links">
-                    <li><a href="#shop">Shop</a></li>
+                    <li><a href="categoryPage.html">Shop</a></li>
                     <li><a href="brandsPage.html">Brands</a></li>
-                    <li><a href="#category">Category</a></li>
+                    <li><a href="#search">Search</a></li>
                     <li><a href="#inspiration">Inspiration</a></li>
                     <li><a href="#games">Games</a></li>
                 </ul>
             </nav>
             <div class="utility-links">
-                <a href="#search">Search</a>
                 <a href="#account">Account</a>
             </div>
         </div>
@@ -106,10 +105,10 @@
             <div class="footer-column">
                 <h3>Category</h3>
                 <ul>
-                    <li>Tops</li>
-                    <li>Outerwear</li>
-                    <li>Bottoms</li>
-                    <li>Accessories</li>
+                    <li><a href="topPage.html">Tops</a></li>
+                    <li><a href="outerwearPage.html">Outerwear</a></li>
+                    <li><a href="bottomsPage.html">Bottoms</a></li>
+                    <li><a href="accessoriesPage.html">Accessories</a></li>
                 </ul>
             </div>
         </div>
