bag and account Page 1

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <ul class="nav-links">
                     <li><a href="categoryPage.html">Shop</a></li>
                     <li><a href="brandsPage.html">Brands</a></li>
-                    <li><a href="#search">Search</a></li>
+                    <li><a href="searchPage.html">Search</a></li>
                     <li><a href="inspirationPage.html">Inspiration</a></li>
                     <li><a href="#games">Games</a></li>
                 </ul>
             </nav>
             <div class="right-actions">
-                <a href="#bag" class="bag-link">Bag</a>
+                <a href="bagPage.html" class="bag-link">Bag</a>
                 <div class="utility-links">
-                    <a href="#account">Account</a>
+                    <a href="accountPage.html">Account</a>
                 </div>
             </div>
         </div>
