--- a/brandPage.html
+++ b/brandPage.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="brands-page brand-list-page">
-    <!-- Header -->
+
     <header class="header">
         <div class="header-container">
             <div class="logo">
@@ -22,7 +22,7 @@
                     <li><a href="brandsPage.html">Brands</a></li>
                     <li><a href="searchPage.html">Search</a></li>
                     <li><a href="inspirationPage.html">Inspiration</a></li>
-                    <li><a href="#games">Games</a></li>
+                    <li><a href="games.html">Games</a></li>
                 </ul>
             </nav>
             <div class="right-actions">
@@ -34,23 +34,21 @@
         </div>
     </header>
 
-    <!-- Dynamic Product Listing by Brand -->
     <section class="product-page" id="brandListing">
         <a href="javascript:history.back()" class="back-link">← Back to Product Page</a>
         <h1 class="page-title" id="brandTitle"></h1>
         <div class="product-grid" id="brandGrid"></div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
                 <h3>Brands</h3>
                 <ul>
-                    <li>Rick Owens</li>
-                    <li>Maison Margiela</li>
-                    <li>Balenciaga</li>
-                    <li>Vivienne Westwood</li>
+                    <li><a href="brandPage.html?brand=Rick%20Owens">Rick Owens</a></li>
+                    <li><a href="brandPage.html?brand=Maison%20Margiela">Maison Margiela</a></li>
+                    <li><a href="brandPage.html?brand=Balenciaga">Balenciaga</a></li>
+                    <li><a href="brandPage.html?brand=Vivienne%20Westwood">Vivienne Westwood</a></li>
                     <li><a href="brandsPage.html">Other Brands</a></li>
                 </ul>
             </div>
@@ -99,5 +97,3 @@
     </script>
 </body>
 </html>
-
-
