--- a/brandsPage.html
+++ b/brandsPage.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="brands-page">
-    <!-- Header -->
+    
     <header class="header">
         <div class="header-container">
             <div class="logo">
@@ -22,7 +22,7 @@
                     <li><a href="brandsPage.html">Brands</a></li>
                     <li><a href="searchPage.html">Search</a></li>
                     <li><a href="inspirationPage.html">Inspiration</a></li>
-                    <li><a href="#games">Games</a></li>
+                    <li><a href="games.html">Games</a></li>
                 </ul>
             </nav>
             <div class="right-actions">
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-    <!-- Main Content Grid -->
+    
     <section class="brands-grid">
         <a href="brandPage.html?brand=Rick%20Owens" class="brand-item-link">
             <div class="brand-item">
@@ -110,26 +110,25 @@
         </a>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
                 <h3>Brands</h3>
                 <ul>
-                    <li>Rick Owens</li>
-                    <li>Maison Margiela</li>
-                    <li>Balenciaga</li>
-                    <li>Vivienne Westwood</li>
-                    <li>Other Brands</li>
+                    <li><a href="brandPage.html?brand=Rick%20Owens">Rick Owens</a></li>
+                    <li><a href="brandPage.html?brand=Maison%20Margiela">Maison Margiela</a></li>
+                    <li><a href="brandPage.html?brand=Balenciaga">Balenciaga</a></li>
+                    <li><a href="brandPage.html?brand=Vivienne%20Westwood">Vivienne Westwood</a></li>
+                    <li><a href="brandsPage.html">Other Brands</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Category</h3>
                 <ul>
-                    <li><a href="topPage.html">Tops</a></li>
-                    <li><a href="outerwearPage.html">Outerwear</a></li>
-                    <li><a href="bottomsPage.html">Bottoms</a></li>
-                    <li><a href="accessoriesPage.html">Accessories</a></li>
+                    <li><a href="categoryPage.html?category=tops">Tops</a></li>
+                    <li><a href="categoryPage.html?category=outerwear">Outerwear</a></li>
+                    <li><a href="categoryPage.html?category=bottoms">Bottoms</a></li>
+                    <li><a href="categoryPage.html?category=accessories">Accessories</a></li>
                 </ul>
             </div>
         </div>
